test_suite/alan-2022-examples/failing/004040_mutation.alan
source I begin leave(423 else) end
